--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   logger: ^2.4.0
   flutter_webrtc: ^1.2.0
   permission_handler: ^12.0.1
-  flutter_local_notifications: ^18.0.1
+  awesome_notifications: ^0.10.1
   http: ^1.2.2
 
 dev_dependencies:
